tests/trybuild/resources/comma_alone.rs
use brood::resources;

fn main() {
    let resources = resources!(,);
}
